--- a/SEleniumAutomation/pom.xml
+++ b/SEleniumAutomation/pom.xml
@@ -11,6 +11,8 @@
         <version>3.1</version>
         <configuration>
           <source>1.7</source>
+           <source>1.7</source>
+            <source>1.7</source>
           <target>1.7</target>
         </configuration>
       </plugin>
